// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormModel validateModel handles nested validation 1`] = `
Object {
  "user": Object {
    "account": "Weird account",
    "lastname": "not a real one",
  },
}
`;

exports[`FormModel validateModel handles nested validation with out structure different than in structure 1`] = `
Object {
  "user": Object {
    "account": "Weird account",
    "lastname": "not a real one",
  },
}
`;

exports[`FormModel validateModel merges objects if several error are returns by validators 1`] = `
Object {
  "user": Object {
    "account": Object {
      "email": "bad email",
    },
    "lastname": "not a real one",
  },
}
`;

exports[`FormModel validateModel returns an object if one validator returns an error 1`] = `
Object {
  "user": Object {
    "lastname": "not a real one",
  },
}
`;
